# geometry-samples

./: .gitignore  README.md
GeometrySamples/: GeometrySamples.sln
GeometrySamples/NativeShapeTransformer/: Geometry.h  NativeShapeTransformer.cpp  NativeShapeTransformer.vcxproj  NativeShapeTransformer.vcxproj.filters  ReadMe.txt  stdafx.cpp  stdafx.h
algorithms/geometry-algorithms-shell/: geometry-algorithms-shell.pro  main.cpp  simplegeometry.cpp  simplegeometry.h  simplespatialreference.cpp  simplespatialreference.h
clustering/SpatialClusteringApp/: SpatialClusteringApp.sln
clustering/SpatialClusteringApp/Spatial.Clustering.Algorithms/: EuclideanDistanceCalculator.cs  KMeansClusterer.cs  SimpleCluster.cs  Spatial.Clustering.Algorithms.csproj
clustering/SpatialClusteringApp/Spatial.Clustering.Algorithms.Testing/: EuclideanDistanceTestSuite.cs  KMeansClustererTestSuite.cs  Spatial.Clustering.Algorithms.Testing.csproj
clustering/SpatialClusteringApp/Spatial.Clustering.Algorithms.Testing/Properties/: AssemblyInfo.cs
clustering/SpatialClusteringApp/Spatial.Clustering.Algorithms/Properties/: AssemblyInfo.cs
clustering/SpatialClusteringApp/Spatial.Clustering.Contracts/: ICluster.cs  IClusterDistanceCalculator.cs  IClusterable.cs  ICusterer.cs  Spatial.Clustering.Contracts.csproj
clustering/SpatialClusteringApp/Spatial.Clustering.Contracts/Properties/: AssemblyInfo.cs
clustering/SpatialClusteringApp/Spatial.Clustering.Data/: ClusterPoint.cs  ClusterPointTextFile.cs  SimpleClusterElement.cs  Spatial.Clustering.Data.csproj
clustering/SpatialClusteringApp/Spatial.Clustering.Data/Properties/: AssemblyInfo.cs
clustering/SpatialClusteringApp/SpatialClusteringApp/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  SpatialClusteringApp.csproj  app.config
clustering/SpatialClusteringApp/SpatialClusteringApp/Properties/: Settings.Designer.cs  Settings.settings
pygeom/: CMakeLists.txt  integration.py
pygeom/pygeom/: CMakeLists.txt  pygeom.cpp  pygeom.h  pymod.cpp
spatial-java-samples/src/edu/gis/spatial/index/: GridHierarchy.java  GridLevel.java
spatial-java-samples/src/edu/gis/spatial/samples/: Main.java
spatial.index/: .project  pom.xml
(+6 files in other folders)
